--- a/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
+++ b/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
@@ -18,8 +18,8 @@
   </head>
   
   <body>
-    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md">
-      <a href="#" class="navbar-brand">Candy</a>
+    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md py-0">
+      <a href="#" class="navbar-brand">CANDY</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,6 +37,17 @@
         </ul>
       </div>
     </nav>
+
+    <section class="cotainer-fluid px-0">
+      <div class="row">
+        <div class="col-6">
+          <h2>MUSEUM OF CANDY</h2>
+        </div>
+        <div class="col-6">
+          <img class="img-fluid" src="imgs/hand2.png" alt="">
+        </div>
+      </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
