--- a/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
+++ b/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
@@ -18,7 +18,7 @@
   </head>
   
   <body>
-    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md py-0">
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
       <a href="#" class="navbar-brand">CANDY</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -39,11 +39,19 @@
     </nav>
 
     <section class="cotainer-fluid px-0">
-      <div class="row">
-        <div class="col-6">
-          <h2>MUSEUM OF CANDY</h2>
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
         </div>
-        <div class="col-6">
+        </div>
+        <div class="col-lg-6">
           <img class="img-fluid" src="imgs/hand2.png" alt="">
         </div>
       </div>
