add text to secod img

--- a/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
+++ b/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
@@ -58,12 +58,20 @@
     </section>
 
     <section class="container-fluid px-0">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-md-6">
           <img src="imgs/milk.png" alt="" class="img-fluid">
         </div>
-        <div class="col-md-6">
-          <img src="imgs/lolli_icon.png" alt="">
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png" alt="">
+              <p class="lead">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt non unde ex harum, eaque ipsa ratione esse corrupti corporis autem? Doloremque eligendi facere odit. Voluptatum placeat ipsam sunt odio quos? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptatibus dignissimos ad perferendis quae, vero maiores debitis laborum facere fuga sed, quos accusantium enim sequi quis eaque odio nisi perspiciatis. 
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
