--- a/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
+++ b/Bootstrap4_Code/13_Museum_Of_Candy/Starter/index.html
@@ -58,15 +58,49 @@
     </section>
 
     <section class="container-fluid px-0">
-      <div class="row align-items-center">
-        <div class="col-md-6">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
           <img src="imgs/milk.png" alt="" class="img-fluid">
         </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+              <p class="lead">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt non unde ex harum, eaque ipsa ratione esse corrupti corporis autem? Doloremque eligendi facere odit. Voluptatum placeat ipsam sunt odio quos? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptatibus dignissimos ad perferendis quae, vero maiores debitis laborum facere fuga sed, quos accusantium enim sequi quis eaque odio nisi perspiciatis. 
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row align-items-center content">
         <div class="col-md-6 text-center">
           <div class="row justify-content-center">
-            <div class="col-10">
+            <div class="col-10 col-lg-8 blurb mb-md-0">
               <h2>MUSEUM OF CANDY</h2>
-              <img src="imgs/lolli_icon.png" alt="">
+              <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+              <p class="lead">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt non unde ex harum, eaque ipsa ratione esse corrupti corporis autem? Doloremque eligendi facere odit. Voluptatum placeat ipsam sunt odio quos? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptatibus dignissimos ad perferendis quae, vero maiores debitis laborum facere fuga sed, quos accusantium enim sequi quis eaque odio nisi perspiciatis. 
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="imgs/gumball.png" alt="" class="img-fluid">
+        </div>
+      </div>
+
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="imgs/sprinkles.png" alt="" class="img-fluid">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
               <p class="lead">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt non unde ex harum, eaque ipsa ratione esse corrupti corporis autem? Doloremque eligendi facere odit. Voluptatum placeat ipsam sunt odio quos? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, voluptatibus dignissimos ad perferendis quae, vero maiores debitis laborum facere fuga sed, quos accusantium enim sequi quis eaque odio nisi perspiciatis. 
               </p>
@@ -80,6 +114,15 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <script>
+      $(function () {
+        $(document).scroll(function(){
+          var $nav = $("#mainNavbar");
+          $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+        });
+      });
+    </script>
     
   </body>
 </html>
